--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.65"
 clap = { version = "4.0.4", features = ["derive"] }
 console = "0.15.2"
+dialoguer = "0.10.2"
 http-serde = "1.1.2"
 reqwest = { version = "0.11.12", default-features = false, features = [
   "rustls-tls",
@@ -17,5 +18,6 @@ serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
 serde_yaml = "0.9.13"
 similar = { version = "2.2.0", features = ["inline"] }
+syntect = "5.0.0"
 tokio = { version = "1.21.2", features = ["full"] }
 url = { version = "2.3.1", features = ["serde"] }
